--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -154,6 +154,9 @@ config ITRACE_COND
   string "Only trace instructions when the condition is true"
   default "true"
 
+config MTRACE
+  bool "Enable mtrace"
+  default y
 
 config DIFFTEST
   depends on TARGET_NATIVE_ELF
