实现了sprintf和printf还有时钟，以及改了一些之前的错误

--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -157,6 +157,9 @@ config ITRACE_COND
 config MTRACE
   bool "Enable mtrace"
   default y
+config FTRACE
+  bool "Enable ftrace"
+  default y
 
 config DIFFTEST
   depends on TARGET_NATIVE_ELF
