--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -157,6 +157,9 @@ config ITRACE_COND
 config MTRACE
   bool "Enable mtrace"
   default y
+config DTRACE
+  bool "Enable dtrace"
+  default y
 config FTRACE
   bool "Enable ftrace"
   default y
