添加性能计数器并在makefile中添加了一个参数用于判断下面的语句是否参与综合

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -38,6 +38,6 @@ COLOR_YELLOW 		= \033[33m
 COLOR_NONE  		= \033[0m
 
 clean:
-	-rm -rf $(BUILD_DIR) result top.dot top.png vsrc/*.png
+	-rm -rf $(BUILD_DIR) tools/performance-trace/*.png tools/performance-trace/*.txt result
 
 .PHONY:clean run 
