--- a/nemu/Kconfig
+++ b/nemu/Kconfig
@@ -169,6 +169,9 @@ config ETRACE
 config STRACE
   bool "Enable strace"
   default y
+config REF_DEVICE
+  bool "Enable Device_ref"
+  default n
 
 config DIFFTEST
   depends on TARGET_NATIVE_ELF
