优化面积:大致将能复用的信号进行了复用

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -46,6 +46,6 @@ COLOR_YELLOW 		= \033[33m
 COLOR_NONE  		= \033[0m
 
 clean:
-	-rm -rf $(BUILD_DIR) tools/performance-trace/*.png tools/performance-trace/*.txt result
+	-rm -rf $(BUILD_DIR) tools/performance-trace/*.png tools/performance-trace/*.txt
 
 .PHONY:clean run 
