优化面积2：重构了部分模块

--- a/npc/.gitignore
+++ b/npc/.gitignore
@@ -12,5 +12,8 @@
 build/
 yosys-sta/
 result
-Icache_pipeline_gpt.v
+Icache_pipeline.v
+Icache_no_pipeline.v
+Icache_less_area.v
+Icache_less_area_2.v
 ysyx_24100006_xbar_arbiter_copy.v
